added the resolved

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <div class="header-section">
         <div class="logo-section">
-          <img src="Images/logo.svg" alt="World Tour">
+          <img src="Images/Group 40071 (2).png" alt="Sabbir-Travels">
           <h1 class="logo-title">Sabbir <span style="color: #FF5400;">Travels</span></h1>
         </div>
         <div class="menu">
