added the resolved again

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <!-- Why Choose Us -->
       <div class="travel-card">
         <div class="Destination-text-section">
-          <h2 class="ccommon-title popular">Why Choose Our Travel Agency</h2>
+          <h2 class="common-title popular">Why Choose Our Travel Agency</h2>
           <p class="tours-text text-turess popular-text">We are committed to providing exceptional value for your money. Our agency works to secure competitive prices for accommodations, transportation, and activities, ensuring that you receive the best possible value without compromising on quality.</p>
         </div>
         <div class="travel-card-secton">
